adjust layout to prevent clipping

--- a/frontend/src/styles/smart.scss
+++ b/frontend/src/styles/smart.scss
@@ -147,7 +147,7 @@ main {
 }
 
 .cardface-info {
-    flex-grow: 1;
+    flex: 0 1 70%;
 }
 
 .cardContent {
@@ -166,11 +166,12 @@ main {
     display: flex;
     justify-content: flex-end;
 
-    width: 100%;
-    flex-shrink: 0;
+    flex: 0 0 100%;
 }
 
 .suggestions {
+    flex: 1 1 auto;
+
     right: 24px;
     top: 32px;
     min-width: 250px;
